--- a/_config.yml
+++ b/_config.yml
@@ -31,18 +31,19 @@ plugins:
   - jekyll-remote-theme
 
 # If you clone the Minima repo and build locally, use this setting.
-# theme: minima
+theme: minima
 
 # As of November 2023, GitHub Pages still uses Minima 2.5.1 (https://pages.github.com/versions/).
 # If you want to use the latest Minima version on GitHub Pages, use the following setting and
 # add a line comment on "theme: minima" above.
-remote_theme: "jekyll/minima@1e8a445"
+# remote_theme: "jekyll/minima"
 # Theme-specific settings
 
 # If you want to link only specific pages in your header, use this and add the path to the pages
 # in order as they should show up.
 header_pages:
-  - about.md
+  - privacy.md
+  # - portfolio.md
 # - projects.md
 # Exclude from processing.
 # The following items will not be processed, by default.
