--- a/_config.yml
+++ b/_config.yml
@@ -43,6 +43,7 @@ theme: minima
 # in order as they should show up.
 header_pages:
   - privacy.md
+  - terms.md
   # - portfolio.md
 # - projects.md
 # Exclude from processing.
